--- a/fr.lproj/Main_iPad.storyboard
+++ b/fr.lproj/Main_iPad.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="7DH-VJ-xqe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="7DH-VJ-xqe">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <scenes>
         <!--Horaire-->
@@ -1307,11 +1307,13 @@ Philippe Cloutier (trésorier)
                                             </fragment>
                                             <fragment>
                                                 <string key="content">
+Christian Roy
 François Coallier
 Idrissa Konkobo
 Véronique Clabots
 Olivier Lacasse
 Robert Gervais
+Pierre-Luc Bolduc
 
 </string>
                                                 <attributes>
